--- a/templates/menu.html
+++ b/templates/menu.html
@@ -76,9 +76,9 @@
                     Reg. asignaturas del estudiante
                   </a>
                 </li>
-                <li class='nav-item' title='Registro de calificacion en asiganturas' style='color:green'>
-                  <a class='nav-link text-primary btn btn-outline-info' href='/FormCaliEst'style='color:green;font-size:12px'>
-                    Reg. calificacion de estudiante
+                <li class='nav-item' title='Registrar Transición de Curso' style='color:green'>
+                  <a class='nav-link text-primary btn btn-outline-info' href='/FormAvance'style='color:green;font-size:12px'>
+                    Reg. Transición de Curso
                   </a>
                 </li>
                 <li class='nav-item' title='Registro nueva transferencia a otra universidad' >
