--- a/templates/menu.html
+++ b/templates/menu.html
@@ -15,9 +15,9 @@
             <li class='nav-item' title='Registro'>
               <a class='nav-link btn btn-outline-secondary text-primary' href='/tpreg'>Preguntas</a>
             </li>
-            <li class='nav-item' title='Registro de respuesta'>
+            <!--<li class='nav-item' title='Registro de respuesta'>
               <a class='nav-link btn btn-outline-secondary text-primary' href='/tresp'>Respuestas</a>
-            </li>
+            </li>-->
             <li class='nav-item' title='backup de la base de datos'>
               <a class='nav-link btn btn-outline-secondary text-primary' href='/backup'>Backup</a>
             </li>
