--- a/templates/registroDocente.html
+++ b/templates/registroDocente.html
@@ -58,23 +58,13 @@
                   <select name="carrera" id='carrera' class="form-control" required>
                     <option value="">Seleccione carrera</option>
                       {% for categoria in consultacarrera %}
-                          <option value="{{ categoria[0] }}" title="{{ categoria[1] }}">
-                            {{ categoria[1] }}
+                          <option value="{{ categoria[0] }}|{{ categoria[1] }}" title="{{ categoria[2] }}">
+                            {{ categoria[2] }}
                           </option>
                       {% endfor %}
                   </select>
                 </div>
-                <div class="mb-3">
-                  <label for="area">Área</label>
-                  <select name="area" id='area' class="form-control" required>
-                    <option value="">Seleccione área</option>
-                      {% for categoria in consulta %}
-                          <option value="{{ categoria[0] }}" title="{{ categoria[1] }}">
-                            {{ categoria[1] }}
-                          </option>
-                      {% endfor %}
-                  </select>
-                </div>
+
 
                                   <div id="error">
 
@@ -106,13 +96,16 @@
       var profesion = document.getElementById('profesion').value;
       var departamento = document.getElementById("departamento").value;
       var sexo = document.getElementById("sexo").value;
-      var carrera = document.getElementById("carrera").value;
-      var area = document.getElementById("area").value;
-      if(carrera == '' || docente == '' || area == '' || paterno=='' || materno == ''||ci==''||departamento==''||sexo==''||profesion==''){
+      var carreras = document.getElementById("carrera").value;
+
+      if(carreras == '' || docente == '' || paterno=='' || materno == ''||ci==''||departamento==''||sexo==''||profesion==''){
         $('#error').html("<div class='alert alert-danger'>Algun campo vacio o falta seleccionar</div>");
         vaciar();
         return ;
       }
+      var resultado = separar(carreras)
+      var carrera = resultado[0];
+      var area = resultado[1];
       var datos=new  FormData();
       datos.append("docente",docente);
       datos.append("paterno",paterno);
@@ -162,6 +155,10 @@
 function redireccionar(){
   // Redireccionar a una URL específica
   window.location.href = "/FormDocente";
+}
+function separar(codigos){
+  var split = codigos.split('|');
+  return split;
 }
 </script>
 <script src="{{ url_for('static', filename='bootstrap-5.0.2/js/bootstrap.min.js') }}" charset="utf-8"></script>
