--- a/templates/menu.html
+++ b/templates/menu.html
@@ -39,7 +39,7 @@
                   </a>
                 </li>
                 <li class='nav-item' title='Registro nuevo plan curricular' style='color:green'style='color:green;font-size:12px'>
-                  <a class='nav-link text-primary btn btn-outline-info' href='/cerrar'style='color:green;font-size:12px'>
+                  <a class='nav-link text-primary btn btn-outline-info' href='/FormPlan'style='color:green;font-size:12px'>
                     Registrar plan de estudio
                   </a>
                 </li>
