--- a/templates/menu.html
+++ b/templates/menu.html
@@ -78,7 +78,7 @@
                 </li>
                 <li class='nav-item' title='Registrar Transición de Curso' style='color:green'>
                   <a class='nav-link text-primary btn btn-outline-info' href='/FormAvance'style='color:green;font-size:12px'>
-                    Reg. Transición de Curso
+                    Reg. vencido de año
                   </a>
                 </li>
                 <li class='nav-item' title='Registro nueva transferencia a otra universidad' >
