--- a/templates/registroAvance.html
+++ b/templates/registroAvance.html
@@ -17,7 +17,7 @@
           <div class="card shadow-sm">
             <div class="card-body">
 
-              <h5 class="card-title text-center mb-4">REGISTRO DE TRANSICIÓN DE CURSO DE ESTUDIANTES</h5>
+              <h5 class="card-title text-center mb-4">REGISTRO DE VENCIDO DE AÑO DE ESTUDIANTES</h5>
               <form method="POST">
                 <div class="mb-3">
                   <label for="estudiante">estudiante</label>
