--- a/templates/registroDocente.html
+++ b/templates/registroDocente.html
@@ -39,9 +39,20 @@
                   <label for="profesion" class="form-label">Profesión</label>
                   <input type="text" class="form-control" id="profesion" name="profesion" required placeholder="ponga la profesión">
                 </div>
-                <div class='mb-3'>
-                  <label for="departamento">departamento</label>
-                  <input type="text" class="form-control"name="departamento" id='departamento' placeholder="Ingrese el dato" required>
+                <div class="mb-3">
+                  <label for="region">Departamento</label>
+                  <select name="departamento" id='departamento' class="form-control" required>
+                    <option value="">Seleccione departamento</option>
+                    <option value="oruro">Oruro</option>
+                    <option value="chuquisaca">Chuquisaca</option>
+                    <option value="beni">Beni</option>
+                    <option value="pando">Pando</option>
+                    <option value="la paz">La paz</option>
+                    <option value="santa cruz">Santa cruz</option>
+                    <option value="tarija">Tarija</option>
+                    <option value="potosi">Potosi</option>
+                    <option value="cochabamba">Cochabamba</option>
+                  </select>
                 </div>
 
                 <div class="mb-3">
