--- a/templates/menu.html
+++ b/templates/menu.html
@@ -14,15 +14,17 @@
           {% if usuario %}
             <li class='nav-item dropdown' title='Registros'>
             <a class='nav-link dropdown-toggle btn btn-outline-secondary text-primary' href='#' id='navbarDropdown2' role='button' data-bs-toggle='dropdown' aria-expanded='false'>
-              Registros <!-- Mostrar nombre de usuario -->
+              Registro entrenamiento <!-- Mostrar nombre de usuario -->
             </a>
             <ul class='dropdown-menu' aria-labelledby='navbarDropdown2'>
               <li class='nav-item' title='Registro nuevo de carrera' style='color:green'>
                   <a class='nav-link text-primary btn btn-outline-info' href='/tpreg'>Preguntas</a>
               </li>
+              <!--
               <li class='nav-item' title='Registro palabras de clave' style='color:green'>
                   <a class='nav-link text-primary btn btn-outline-info' href='/Clave'>Palabras claves</a>
               </li>
+-->
             </ul>
             </li>
 
